--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,17 +12,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-28 Wed 17:26]
+#+CAPTION: Clock summary at [2016-12-28 Wed 17:36]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *4:42* |      |      | 100.0 |
+| *Total time*                                                                | *4:49* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 4:42   |      |      | 100.0 |
-| Active                                                                      |        | 4:42 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:21 |   7.4 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:57 |  20.2 |
-| COMPLETED Consider supporting multiple inheritance on non-proxy models      |        |      | 3:24 |  72.3 |
+| Stories                                                                     | 4:49   |      |      | 100.0 |
+| Active                                                                      |        | 4:49 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:21 |   7.3 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:57 |  19.7 |
+| COMPLETED Consider supporting multiple inheritance on non-proxy models      |        |      | 3:24 |  70.6 |
+| STARTED Create a validator in yarn                                          |        |      | 0:07 |   2.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -119,6 +120,120 @@ Validation check removed from transformer:
 :            BOOST_THROW_EXCEPTION(transformation_error(multiple_inheritance +
 :                    po.id()));
 :        }
+
+*** STARTED Create a validator in yarn                                :story:
+    CLOCK: [2016-12-28 Wed 17:29]--[2016-12-28 Wed 17:36] =>  0:07
+
+#+begin_quote
+*Story*: As a dogen user, I want to know exactly why my diagram is not
+correct so that I can fix the issues. I also want dogen to pick up
+errors and generate valid code so that I don't have to figure out what
+went wrong by looking at the generated code and the compiler errors.
+#+end_quote
+
+We need a class responsible for checking the consistency of the yarn
+model. There are several things we need to check for non-merged
+models:
+
+- vistor is only supported at the base class level: due to
+  implementation constraints, we only support visitable at the base
+  class level. Add an exception if users attempt to use visitable
+  stereotype in a class that has parents. Note: is this true? We are
+  using derived visitable in C++ model.
+- there must be at least one element for a given id with
+  =is_element_extension= set to false.
+- concepts must have at least one property (or method). Maybe just warn?
+- refined concepts must not have properties (or methods) with clashing
+  names.
+- type names, model names, etc must not contain spaces or other
+  invalid characters. They should also not be a keyword on the target
+  language (e.g. =if=, =default=, etc.). We should use a identifier
+  parser for name validation. We should have a data file that lists
+  keywords by language.
+- type_name is non-empty; cannot be blank or a variable name
+- type name must not exist on any model: basically detect duplicate
+  element names. At present we simply silently drop duplicates.
+- parent names and original parent names must exist in current model
+  (resolver?)
+- leaves exist in current model.
+- all properties of types in current model must exist.
+- properties of types in other models result in dependencies.
+- enumeration must have at least one enumerator. warning?
+- enumerator name must not be empty
+- enumerator name must be unique
+- external module path of the model matches all objects, etc in
+  current model.
+- model name is non-empty.
+- documentation does not have non-printable characters.
+- number of type arguments is consistent with objects type.
+- objects marked as is parent must have at least one child.
+- property must have non-empty name.
+- is versioned objects must have a property called version.
+- string table cannot have duplicate entries.
+- duplicate checks: properties cannot have duplicate names; classes in
+  a package cannot have the same name; namespaces at the same level
+  cannot have the same name;
+- Issue error when a property is a value of an abstract class: yarn
+  should fail to merge if the user attempts to create a property of a
+  base class. It should allow pointers to the base class though (raw,
+  shared pointers, boost optional etc).
+- Test relationships between objects and other meta types: We should
+  validate that objects are only related to other objects - e.g. they
+  cannot inherit from exception or enumeration or vice-versa. Add
+  tests for this.
+- Its not possible to be immutable and fluent.
+- it is not possible to be immutable and be in an inheritance
+  relationship. FIXME: why is that?
+- user models cannot have stereotype of primitive.
+- we don't support generic types (see [[Supporting%20user%20defined%20generic%20types][Supporting user defined generic
+types]]) so we should throw if a user attempts to use them.
+- a type marked as final cannot have descendants.
+- types in global namespace must have an empty location.
+- if model module path is empty, location must also be empty.
+- check the number of type parameters in the type definition and
+  ensure that all name tree's have the expected number of type
+  parameters.
+
+For merged models:
+
+- issue error when a property is a value of an abstract class
+- properties exist in merged model.
+
+Existing validation code:
+
+:    if ((o.is_parent() || o.is_child()) && p.is_immutable())  {
+:        BOOST_LOG_SEV(lg, error) << immutabilty_with_inheritance
+:                                 << o.name().id();
+:
+:        BOOST_THROW_EXCEPTION(
+:            transformation_error(immutabilty_with_inheritance +
+:                o.name().id()));
+:    }
+
+: BOOST_AUTO_TEST_CASE(inheritance_with_immutability_throws) {
+:     SETUP_TEST_LOG_SOURCE("inheritance_with_immutability_throws");
+:     auto c(mock_context(model_name));
+:
+:     const auto po(mock_processed_object_factory::make_generalization());
+:     const auto con(po[0].connection());
+:     BOOST_REQUIRE(con);
+:     const auto parents = std::list<std::string> { con->first };
+:     c.child_id_to_parent_ids().insert(std::make_pair(con->second, parents));
+:
+:     transform(c, {po[1]});
+:
+:     auto po1(po[2]);
+:     po1.stereotype(immutable_stereotype);
+:     const auto op1(mock_profile(po1));
+:     contains_checker<transformation_error> cc(immutability_inheritance);
+:     BOOST_CHECK_EXCEPTION(transform(c, po1, op1), transformation_error, cc);
+:
+:     c.child_id_to_parent_ids().clear();
+:     auto po2(po[1]);
+:     po2.stereotype(immutable_stereotype);
+:     const auto op2(mock_profile(po2));
+:     BOOST_CHECK_EXCEPTION(transform(c, po2, op2), transformation_error, cc);
+: }
 
 *** Augment element ID with meta-model type                           :story:
 
