--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,18 +12,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-28 Wed 17:36]
+#+CAPTION: Clock summary at [2016-12-28 Wed 20:23]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *4:49* |      |      | 100.0 |
+| *Total time*                                                                | *5:51* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 4:49   |      |      | 100.0 |
-| Active                                                                      |        | 4:49 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:21 |   7.3 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:57 |  19.7 |
-| COMPLETED Consider supporting multiple inheritance on non-proxy models      |        |      | 3:24 |  70.6 |
-| STARTED Create a validator in yarn                                          |        |      | 0:07 |   2.4 |
+| Stories                                                                     | 5:51   |      |      | 100.0 |
+| Active                                                                      |        | 5:51 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:21 |   6.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:57 |  16.2 |
+| COMPLETED Consider supporting multiple inheritance on non-proxy models      |        |      | 3:24 |  58.1 |
+| STARTED Create a validator in yarn                                          |        |      | 1:09 |  19.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -122,6 +122,7 @@ Validation check removed from transformer:
 :        }
 
 *** STARTED Create a validator in yarn                                :story:
+    CLOCK: [2016-12-28 Wed 19:21]--[2016-12-28 Wed 20:23] =>  1:02
     CLOCK: [2016-12-28 Wed 17:29]--[2016-12-28 Wed 17:36] =>  0:07
 
 #+begin_quote
@@ -149,7 +150,7 @@ models:
   invalid characters. They should also not be a keyword on the target
   language (e.g. =if=, =default=, etc.). We should use a identifier
   parser for name validation. We should have a data file that lists
-  keywords by language.
+  keywords by language. See [[http://en.cppreference.com/w/cpp/keyword][C++ keywords]]
 - type_name is non-empty; cannot be blank or a variable name
 - type name must not exist on any model: basically detect duplicate
   element names. At present we simply silently drop duplicates.
