yarn: implement basic model validation around names

--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,18 +12,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-28 Wed 21:27]
-| <75>                                                                        |        |      |      |       |
-| Headline                                                                    | Time   |      |      |     % |
-|-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *6:52* |      |      | 100.0 |
-|-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 6:52   |      |      | 100.0 |
-| Active                                                                      |        | 6:52 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:21 |   5.1 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:57 |  13.8 |
-| COMPLETED Consider supporting multiple inheritance on non-proxy models      |        |      | 3:24 |  49.5 |
-| STARTED Create a validator in yarn                                          |        |      | 2:10 |  31.6 |
+#+CAPTION: Clock summary at [2017-01-03 Tue 17:01]
+| <75>                                                                        |         |       |      |       |
+| Headline                                                                    | Time    |       |      |     % |
+|-----------------------------------------------------------------------------+---------+-------+------+-------|
+| *Total time*                                                                | *12:39* |       |      | 100.0 |
+|-----------------------------------------------------------------------------+---------+-------+------+-------|
+| Stories                                                                     | 12:39   |       |      | 100.0 |
+| Active                                                                      |         | 12:39 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:21 |   2.8 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   7.5 |
+| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |  26.9 |
+| STARTED Add basic validation infrastructure                                 |         |       | 7:57 |  62.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -121,10 +121,55 @@ Validation check removed from transformer:
 :                    po.id()));
 :        }
 
-*** STARTED Create a validator in yarn                                :story:
+*** STARTED Add basic validation infrastructure                       :story:
+    CLOCK: [2017-01-03 Tue 16:48]--[2017-01-03 Tue 17:01] =>  0:13
+    CLOCK: [2017-01-03 Tue 16:37]--[2017-01-03 Tue 16:47] =>  0:10
+    CLOCK: [2017-01-03 Tue 14:46]--[2017-01-03 Tue 16:36] =>  1:50
+    CLOCK: [2017-01-03 Tue 13:51]--[2017-01-03 Tue 14:45] =>  0:54
+    CLOCK: [2017-01-03 Tue 11:18]--[2017-01-03 Tue 12:51] =>  1:33
+    CLOCK: [2017-01-03 Tue 11:01]--[2017-01-03 Tue 11:18] =>  0:17
+    CLOCK: [2017-01-03 Tue 09:50]--[2017-01-03 Tue 10:40] =>  1:28
     CLOCK: [2016-12-28 Wed 20:24]--[2016-12-28 Wed 21:25] =>  1:01
     CLOCK: [2016-12-28 Wed 19:21]--[2016-12-28 Wed 20:23] =>  1:02
     CLOCK: [2016-12-28 Wed 17:29]--[2016-12-28 Wed 17:36] =>  0:07
+
+The objective of this story is to create enough of the validation
+infrastructure required to ensure non-proxy models do not have
+multiple inheritance. We should add a couple of other validation rules
+to make sure the infrastructure is good enough. All other validation
+work will be moved to the backlog.
+
+Implemented checks:
+
+*Merged model checks*
+
+- enumerator name must not be empty
+- enumerator name must be unique
+- model name is non-empty.
+- property must have non-empty name.
+- duplicate checks: properties cannot have duplicate names; classes in
+  a package cannot have the same name; namespaces at the same level
+  cannot have the same name;
+- type_name is non-empty; cannot be blank or a variable name
+- type names, model names, etc must not contain spaces or other
+  invalid characters. They should also not be a keyword on the target
+  language (e.g. =if=, =default=, etc.). We should use a identifier
+  parser for name validation. We should have a data file that lists
+  keywords by language. See [[http://en.cppreference.com/w/cpp/keyword][C++ keywords]]. This is done in merged model
+  to ensure we can report provenience correctly. Note that we need to
+  be careful with built in models; these will use "invalid" type names
+  such as =int= etc.
+- all properties of types in current model must exist.
+- parent names and original parent names must exist in current model
+  (resolver?)
+- multiple inheritance is only allowed on non-proxy models.
+- refined concepts must not have properties (or methods) with clashing
+  names.
+- type name must not exist on any model: basically detect duplicate
+  element names. At present we simply silently drop duplicates.
+- leaves exist in current model.
+
+*Previous Understanding*
 
 #+begin_quote
 *Story*: As a dogen user, I want to know exactly why my diagram is not
@@ -136,111 +181,12 @@ went wrong by looking at the generated code and the compiler errors.
 We need a class responsible for checking the consistency of the yarn
 model.
 
-*Dia level checks*:
+*** Clean up enumerator implementation                                :story:
 
-- exceptions and enumerations can't inherit
-- exceptions shouldn't have properties.
-
-*Intermediate model checks*:
-
-- type names, model names, etc must not contain spaces or other
-  invalid characters. They should also not be a keyword on the target
-  language (e.g. =if=, =default=, etc.). We should use a identifier
-  parser for name validation. We should have a data file that lists
-  keywords by language. See [[http://en.cppreference.com/w/cpp/keyword][C++ keywords]]
-- type_name is non-empty; cannot be blank or a variable name
-- enumeration must have at least one enumerator. warning?
-- enumerator name must not be empty
-- enumerator name must be unique
-- external module path of the model matches all objects, etc in
-  current model.
-- model name is non-empty.
-- documentation does not have non-printable characters.
-- number of type arguments is consistent with objects type.
-- property must have non-empty name.
-- duplicate checks: properties cannot have duplicate names; classes in
-  a package cannot have the same name; namespaces at the same level
-  cannot have the same name;
-- Issue error when a property is a value of an abstract class: yarn
-  should fail to merge if the user attempts to create a property of a
-  base class. It should allow pointers to the base class though (raw,
-  shared pointers, boost optional etc).
-- Test relationships between objects and other meta types: We should
-  validate that objects are only related to other objects - e.g. they
-  cannot inherit from exception or enumeration or vice-versa. Add
-  tests for this.
-- Its not possible to be immutable and fluent.
-- it is not possible to be immutable and be in an inheritance
-  relationship. FIXME: why is that?
-- user models cannot have stereotype of primitive.
-- we don't support generic types (see [[Supporting%20user%20defined%20generic%20types][Supporting user defined generic
-types]]) so we should throw if a user attempts to use them.
-- a type marked as final cannot have descendants.
-- types in global namespace must have an empty location.
-- if model module path is empty, location must also be empty.
-- check the number of type parameters in the type definition and
-  ensure that all name tree's have the expected number of type
-  parameters.
-
-*Merged model checks*
-
-- properties of types in other models result in dependencies.
-- all properties of types in current model must exist.
-- parent names and original parent names must exist in current model
-  (resolver?)
-- concepts that don't refine must have at least one property (or
-  method). Maybe just warn?
-- issue error when a property is a value of an abstract class
-- properties exist in merged model.
-- multiple inheritance is only allowed on non-proxy models.
-- vistor is only supported at the base class level: due to
-  implementation constraints, we only support visitable at the base
-  class level. Add an exception if users attempt to use visitable
-  stereotype in a class that has parents. Note: is this true? We are
-  using derived visitable in C++ model.
-- there must be at least one element for a given id with
-  =is_element_extension= set to false.
-- refined concepts must not have properties (or methods) with clashing
-  names.
-- type name must not exist on any model: basically detect duplicate
-  element names. At present we simply silently drop duplicates.
-- leaves exist in current model.
-
-Existing validation code:
-
-:    if ((o.is_parent() || o.is_child()) && p.is_immutable())  {
-:        BOOST_LOG_SEV(lg, error) << immutabilty_with_inheritance
-:                                 << o.name().id();
-:
-:        BOOST_THROW_EXCEPTION(
-:            transformation_error(immutabilty_with_inheritance +
-:                o.name().id()));
-:    }
-
-: BOOST_AUTO_TEST_CASE(inheritance_with_immutability_throws) {
-:     SETUP_TEST_LOG_SOURCE("inheritance_with_immutability_throws");
-:     auto c(mock_context(model_name));
-:
-:     const auto po(mock_processed_object_factory::make_generalization());
-:     const auto con(po[0].connection());
-:     BOOST_REQUIRE(con);
-:     const auto parents = std::list<std::string> { con->first };
-:     c.child_id_to_parent_ids().insert(std::make_pair(con->second, parents));
-:
-:     transform(c, {po[1]});
-:
-:     auto po1(po[2]);
-:     po1.stereotype(immutable_stereotype);
-:     const auto op1(mock_profile(po1));
-:     contains_checker<transformation_error> cc(immutability_inheritance);
-:     BOOST_CHECK_EXCEPTION(transform(c, po1, op1), transformation_error, cc);
-:
-:     c.child_id_to_parent_ids().clear();
-:     auto po2(po[1]);
-:     po2.stereotype(immutable_stereotype);
-:     const auto op2(mock_profile(po2));
-:     BOOST_CHECK_EXCEPTION(transform(c, po2, op2), transformation_error, cc);
-: }
+- make enumerator nameable, and compute name correctly (qualified,
+  etc). This makes it conceptually consistent
+- move value computations to yarn so that in the future we can add
+  meta-data to override it.
 
 *** Augment element ID with meta-model type                           :story:
 
